# primer

./: CMakeLists.txt  blob.cpp  blob.h  mail.cpp  mail.h  main.cpp  query.h  strVec.cpp  strVec.h  textquery.cpp  textquery.h
algorithm/heap/leftheap/: leftheap.cpp  leftheap.h
algorithm/httpserver/: myserver.cpp  myserver.h
algorithm/seq_list/: seqlist.cpp  seqlist.h
algorithm/tree/: tree.cpp  tree.h
algorithm/tree/avl/: avltree.cpp  avltree.h
algorithm/tree/binqueue/: binqueue.h
algorithm/tree/redblack/: redblacktree.h
algorithm/tree/splaytree/: splaytree.h
textquery/: andquery.h  andqueyr.cpp  binaryquery.h  notquery.cpp  notquery.h  orquery.cpp  orquery.h  query.h  query_base.h  textquery.cpp  textquery.h  wordquery.h
